sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:21: error: not found: value h
        while(getCouleur(h)==ROUGE && l>=0){
                         ^